feat: add a new conversion case for recompute quantity
